# hft-parser-generator

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  test_in_docker.ps1
.github/workflows/: ci.yml
bench/: benchmark.cpp  lob_benchmark.cpp
generator/: generate_synthetic_itch.py  generator.py
godbolt/: godbolt_snippet.cpp
include/: endian_utils.hpp  itch_file_reader.hpp  market.hpp  moldudp64.hpp  pcap_reader.hpp  udp_receiver.hpp
schema/: itch50_schema.json  ouch42_schema.json  validate_schema.py
src/: itch_reader_main.cpp  live_main.cpp  lob_main.cpp  main.cpp
test/: market_test.cpp  ouch_test.cpp  parser_test.cpp  replay_test.cpp
